math1061 notes finished!

--- a/latex_template/macros.tex
+++ b/latex_template/macros.tex
@@ -36,6 +36,10 @@
 \DeclareMathOperator{\End}{End} % endomorphism
 \DeclareMathOperator{\Span}{span}
 \newcommand{\Mod}{\mathbin{\mathrm{mod}}}
+\newcommand{\comb}[2]{\begin{pmatrix} #1 \\ #2 \end{pmatrix}}
+\newcommand{\perm}[2]{\mathrm{P}\left( #1, #2 \right)}
+\newcommand{\multiset}[2]{\ensuremath{\left(\kern-.5em\left( \begin{matrix} #1 \\ #2 \end{matrix} \right)\kern-.5em\right)}}
+\newcommand{\prob}[1]{\mathbb{P}\bracks{#1}}
 
 \newcommand{\eps}{\epsilon}
 \newcommand{\veps}{\varepsilon}
@@ -118,6 +122,7 @@
 \newcommand{\Defin}[1]{\textbf{Definition} (#1).}
 \newcommand{\Claim}{\textbf{Claim. }}
 \newcommand{\Propo}{\textbf{Proposition. }}
+\newcommand{\Proof}{\textit{proof. }}
 
 \newcommand{\lb}{\left(}
 \newcommand{\rb}{\right)}
@@ -127,6 +132,8 @@
 \newcommand{\rsb}{\right]}
 \newcommand{\bracks}[1]{\lb #1 \rb}
 \newcommand{\braces}[1]{\lbr #1 \rbr}
+\newcommand{\brangle}[1]{\left\langle #1 \right\rangle}
+
 \newcommand{\suchthat}{\medspace\middle|\medspace}
 \newcommand{\sqbracks}[1]{\lsb #1 \rsb}
 \renewcommand{\abs}[1]{\left| #1 \right|}
