--- a/latex_template/preamble.tex
+++ b/latex_template/preamble.tex
@@ -11,6 +11,9 @@
 \usepackage{mathtools}
 \usepackage{bookmark}
 \usepackage{enumitem}
+\usepackage{kbordermatrix}
+\renewcommand{\kbldelim}{(} % Change left delimiter to (
+\renewcommand{\kbrdelim}{)} % Change right delimiter to )
 \usepackage{hyperref,theoremref}
 \hypersetup{
 	pdftitle={Assignment},
@@ -37,6 +40,9 @@
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.18}
 \usetikzlibrary{calc}
+\usetikzlibrary{graphs}
+\usetikzlibrary{graphs.standard}
+% \usetikzlibrary{graphdrawing}
 
 \newcommand\mycommfont[1]{\footnotesize\ttfamily\textcolor{blue}{#1}}
 \SetCommentSty{mycommfont}
