--- a/latex_template/macros.tex
+++ b/latex_template/macros.tex
@@ -153,6 +153,7 @@
 \newcommand{\Then}{\text{Then }}
 \newcommand{\Hence}{\text{Hence }}
 \newcommand{\Choose}{\text{Choose }}
+\newcommand{\Impose}{\text{Impose }}
 \newcommand{\Take}{\text{Take }}
 \newcommand{\false}{\text{False}}
 \newcommand{\true}{\text{True}}
