--- a/latex_template/preamble.tex
+++ b/latex_template/preamble.tex
@@ -23,6 +23,7 @@
 }
 \usepackage[most,many,breakable]{tcolorbox}
 \usepackage{xcolor}
+\definecolor{darkgreen}{rgb}{0,0.5,0}
 \usepackage{varwidth}
 \usepackage{varwidth}
 \usepackage{etoolbox}
